Added eligible field
